updates before move to Rhode Island

--- a/cv.bib
+++ b/cv.bib
@@ -777,14 +777,26 @@ x-ray pulsars in O3 LIGO data}",
     year = "2024"
 }
 
-@software{Ferguson_mayawaves_2024,
-author = {Ferguson, Deborah and Anne, Surendra and Gracia-Linares, Miguel and Iglesias, Hector and Jan, Aasim and Martinez, Erick and Lu, Lu and Meoni, Filippo and Nowicki, Ryan and Trostel, Max and Tsao, Bing-Jyun and Valorz, Finny},
-doi = {10.5281/zenodo.8339252},
-month = jun,
-title = {{mayawaves}},
-url = {https://github.com/MayaWaves/mayawaves},
-version = {v2024.6},
-year = {2024}
+@software{ferguson_2025_15399835,
+  author       = {Ferguson, Deborah and
+                  Anne, Surendra and
+                  Gracia-Linares, Miguel and
+                  Iglesias, Hector and
+                  Jan, Aasim and
+                  Martinez, Erick and
+                  Lu, Lu and
+                  Meoni, Filippo and
+                  Nowicki, Ryan and
+                  Trostel, Max and
+                  Tsao, Bing-Jyun and
+                  Valorz, Finny},
+  title        = {mayawaves},
+  month        = may,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {v2025.5},
+  doi          = {10.5281/zenodo.15399835},
+  url          = {https://doi.org/10.5281/zenodo.15399835}
 }
 
 @article{FermiGamma-RayBurstMonitorTeam:2023mtr,
@@ -945,4 +957,31 @@ year = {2024}
     primaryClass = "astro-ph.HE",
     month = "7",
     year = "2024"
+}
+
+@article{Kang:2025nio,
+    author = "Kang, Karen and Miller, Simona J. and Chatziioannou, Katerina and  \mkbibbold{Ferguson}, \mkbibbold{Deborah}",
+    title = "{Mapping Parameter Correlations in Spinning Binary Black Hole Mergers}",
+    eprint = "2502.17402",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "2",
+    year = "2025",
+    doi = "10.1103/4vbp-1jwl",
+    options = {maxnames=999}
+}
+
+@article{Richards:2025ows,
+    author = "Richards, Chloe and Dima, Alexandru and  \mkbibbold{Ferguson}, \mkbibbold{Deborah} and Witek, Helvi",
+    title = "{Growing black-hole hair in nonminimally coupled biscalar gravity}",
+    eprint = "2501.14034",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.111.124039",
+    journal = "Phys. Rev. D",
+    volume = "111",
+    number = "12",
+    pages = "124039",
+    year = "2025",
+    options = {maxnames=999}
 }
