--- a/cv.tex
+++ b/cv.tex
@@ -35,7 +35,7 @@
   \textbf{Research Positions:}\\
   \vspace{4px}
   
-  \textit{Postdoctoral Fellow} \hfill \textit{2023-Present} \\
+  \textit{Postdoctoral Research Associate} \hfill \textit{2023-2025} \\
   University of Illinois Urbana-Champaign\\
   Research focus: Numerical relativity in General Relativity and beyond with an\\ eye toward next generation detectors\\
   Advisor: Helvi Witek\\
@@ -56,7 +56,7 @@
   
   \vspace{8px}
 	
-  \textit{Undergraduate Research Assistant} \hfill \textit{2013-2017}\\
+  \textit{Undergraduate Research Assistant} \hfill \textit{2013-2016}\\
   University of Kentucky\\
   Research focus: Milky Way tomography with K and M dwarf Stars: the vertical\\ structure of the galactic disk\\ 
   Advisor: Susan Gardner\\
@@ -103,27 +103,27 @@
   
   \textbf{Mentoring:}\\
   Graduate Students Co-advised\\
-  Noora Ghadiri - expected graduation from UIUC 2027\\
-  Aasim Jan - expected graduation from UT Austin 2025\\
+  \quad Noora Ghadiri - expected graduation from UIUC 2027\\
+  \quad Aasim Jan - expected graduation from UT Austin 2025\\
   
   \vspace{4px}
    
    Undergraduate Students Advised \\
-   Udit Ohri - current\\
-   Finny Valorz - graduated 2024 - now a graduate student at UT Austin\\   
-   Evelyn Allsup - graduated 2024\\
-   Ryan Nowicki - graduated 2023 - now a graduate student at Vanderbilt\\
-   Erick Martinez - graduated 2023 - now a graduate student at UT Austin\\
-   Lu Lu - graduated 2022\\
-   Surendra Anne - expected graduation 2025\\
-   Filippo Meoni - expected graduation 2025\\
-   Blake Steadham - expected garduation 2025\\
+   \quad Udit Ohri - current\\
+   \quad Finny Valorz - graduated 2024 - now a graduate student at UT Austin\\   
+   \quad Evelyn Allsup - graduated 2024\\
+   \quad Ryan Nowicki - graduated 2023 - now a graduate student at Vanderbilt\\
+   \quad Erick Martinez - graduated 2023 - now a graduate student at UT Austin\\
+   \quad Lu Lu - graduated 2022\\
+   \quad Surendra Anne - expected graduation 2025\\
+   \quad Filippo Meoni - expected graduation 2025\\
+   \quad Blake Steadham - expected graduation 2025\\
     
  
   \vspace{8px}   
  
   \textbf{Outreach:}\\
-  2024-Present - BRIDGE Speaker Program Co-Organizer\\ 
+  2024-2025 - BRIDGE Speaker Program Co-Organizer\\ 
   2022 - Lakeway Breakfast Club Talk\\
   2021 - Generated visualizations for LVK announcement of Black-Hole Neutron-Star mergers\\
   2020 - Generated visualizations for LVK announcement of Intermediate Mass Black Hole merger\\
@@ -136,7 +136,7 @@
 
   \textbf{Leadership and Professional Service: }\\
   2024-Present - Chair of Seminar Committee for APS Division of Gravitational Physics\\
-  2024-Present - Co-Chair of LISA Early Career Scientists\\
+  2024-Present - Co-Chair of LISA Consortium Early Career Scientists\\
   2023-Present - Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
   2020-2023 - LISA Working Group White Paper Coordinator for Accuracy and Numerical Relativity\\ \hspace{58px}Sections \\
   %2023 - Chair for Amaldi Conference on Gravitational Waves Session\\
@@ -148,14 +148,15 @@
   \vspace{8px}  
   
   \textbf{Collaboration Membership: }\\
+  2022-Present - Cosmic Explorer Consortium\\
   2020-Present - LISA Consortium\\
-  2016-Present - LIGO Scientific Collaboration\\
+  2016-2024 - LIGO Scientific Collaboration\\
   2016-Present - Einstein Toolkit\\
   
   \vspace{8px}
   
   \textbf{Open-Source Software:}\\
-  \fullcite{Ferguson_mayawaves_2024}\\
+  \fullcite{ferguson_2025_15399835}\\
   
   \vspace{8px}
 
@@ -168,8 +169,14 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
-  \item ``Numerical Relativity Challenges,'' Plenary at 15th International LISA Symposium, Dublin, Ireland, July 10, 2024
+  \item ``Current Status and Future Plans for the Einstein Toolkit,'' Gregynog Numerical Relativity 2025, Powys, Wales, June 18, 2025
+  \item ``Using Cauchy Characteristic Evolution to Obtain Accurate Waveforms at Infinity,'' North American Einstein Toolkit Workshop, University of Texas at Austin, Austin, TX, June 9, 2025
+  \item ``Artificial Intelligence for Gravitational Waveform Modeling,'' American Physical Society Global Physics Summit, Anaheim, CA, March 17, 2025
+  \item ``Numerical Relativity for High-Sensitivity Gravitational-Wave Observations,'' Colloquium at University of Rhode Island, Kingston, RI, November 18, 2024 
+  \item ``Numerical Relativity Challenges,'' \textbf{Plenary} at 15th International LISA Symposium, Dublin, Ireland, July 10, 2024
   \item ``Using Numerical Relativity Waveforms For Gravitational-Wave Observation,'' North American Einstein Toolkit Workshop, Louisiana State University, Baton Rouge, LA, June 3, 2024
+  \item ``Numerical Relativity for High-Sensitivity Gravitational-Wave Observations,'' Colloquium at University of Wisconsin-Madison, Madison, WI, March 12, 2024 
+  \item ``Numerical Relativity for High-Sensitivity Gravitational-Wave Observations,'' Colloquium at Oregon State University, Corvallis, OR, March 8, 2024 
   \item ``Numerical Relativity for Next-Generation Gravitational-Wave Observation,'' Seminar at Vanderbilt University, Nashville, TN, March 1, 2024
   \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation,'' Seminar at the University of Illinois Urbana-Champaign, Urbana, IL, October 25, 2023
   \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation,'' Seminar at Cornell, Ithaca, NY, October 18, 2023
@@ -181,6 +188,8 @@
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors,'' Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors,'' Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Urbana, IL, November 11, 2020
   \end{enumerate}
+
+\vspace{8px}
 
   \textbf{Contributed Talks:}
   \begin{enumerate}
@@ -198,10 +207,12 @@
   \item D. Ferguson, C. Powell, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena,'' National Conference on Undergraduate Research, Lexington KY, April 2014
   \end{enumerate} 
 
-  \vspace{8px}
+  \vspace{32px}
 
   \textbf{Short Author Publications:}
   \begin{enumerate}      
+    \item \fullcite{Richards:2025ows}
+    \item \fullcite{Kang:2025nio}
     \item \fullcite{Jan:2023raq}
     \item \fullcite{Ferguson:2023vta}
     \item \fullcite{Ferguson:2023mks}
